[package]
name = "specs_wasm"
version = "0.2.0"
authors = ["Joël Lupien (Jojolepro) <jojolepromain@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.15.0"
web_worker = "0.2.0"
wasm-bindgen = { version = "0.2.56", features = ['serde-serialize'] }
#wasm-bindgen = { path = "./wasm-bindgen", features = ['serde-serialize'] }

